--- a/GioiThieuCaNhan.css
+++ b/GioiThieuCaNhan.css
@@ -208,3 +208,36 @@ body{
     background-color: #379dd4;
     transform: translateY(-3px);
 }
+/* Hiệu ứng chuột */
+.cursor{
+    position: fixed;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    pointer-events: none;
+    transform: translate(-50%,-50%);
+    z-index: 9999;
+    transition: width 0.2s, height 0.2s;
+}
+.heart{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background: url('https://pngimg.com/uploads/heart/heart_PNG51335.png') no-repeat center/contain;
+    background-size: 100%;
+    pointer-events: none;
+    border-radius: 50%;
+    animation: heartFloat 2s ease-out forwards; /* bubble 2s ease-out forwards */
+
+}
+/* @keyframes bubble {
+    0% { transform: scale(1); }
+    25% { transform: scale(1.3); }
+    50% { transform: scale(0.8); }
+    75% { transform: scale(1.2); }
+    100% { transform: scale(1); }
+} */
+@keyframes heartFloat {
+    0% { opacity: 1; transform: translateY(0) rotate(0deg); }
+    100% { opacity: 0; transform: translateY(-100px) rotate(45deg); }
+}
