--- a/GioiThieuCaNhan.css
+++ b/GioiThieuCaNhan.css
@@ -1,11 +1,21 @@
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     font-family: 'Montserrat', sans-serif;
 }
+.LienHe{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    /* display: flex; */
+    /* justify-content: center;
+    align-items: center;
+    flex-direction: column; */
+}
 .my_favorite{
-    margin: 300px 0 250px 0;
+    width: 100%;
+    height: 100vh;
     flex-wrap: wrap;
     transition: filter 0.5s ease;
     display: flex;
@@ -37,6 +47,7 @@
     object-fit: cover;       /* Cắt ảnh để vừa khung */
     display: block;          /* Xóa khoảng trắng dưới ảnh */
     border-radius: 12px; 
+    /* transition: 2s ease-in-out; */
 }
 .photo:hover img {
     transform: scale(1.5);
@@ -47,7 +58,7 @@
     left: 10px;
     font-size:18px;
     color: #fff;
-    background: rgba(0,0,0,0.6);
+    background: rgba(0,0,0,0.6); 
     padding: 5px 10px;
     border-radius: 5px;
     overflow: hidden;
@@ -66,31 +77,52 @@ body.blurred{
     width: 100%;
     padding: 100px 0;
     min-height: 100vh;
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
 }
 .container{
-    text-align: center;
+    /* text-align: center; */
+    position: relative;
     padding-top: 50px;
 }
+.Logo{
+    margin-left: 1000px;
+    margin-top: 100px;
+    position: absolute;
+}
 .Logo img{
-    width: 200px;
+    width: 300px;
     height: auto;
     border-radius: 50%;
     box-shadow: 0px 11px 22px -9px #000000;
+    transition: 0.5s ease-in-out;
+}
+.Logo:hover img{
+    transform: scale(1.1);
 }
 .TieuDe{
-    font-size: 15px;
+    position: absolute;
+    font-size: 20px;
     font-weight: 600;
     color: #ffffff;
     text-align: center;
-    margin-bottom: 25px;
+    margin-top: 100px;
+    margin-bottom: 300px;
+    margin-left: 300px;
+}
+.TieuDe h1{
+    color: antiquewhite;
 }
 .TieuDe h3{
     padding-bottom: 10px;
     font-size: 30px;
     font-weight: 700;
+    color: #ffffff;
+}
+.TieuDe h4{
+    font-size: 20px;
+    font-weight: 600;
     color: #ffffff;
 }
 
@@ -103,48 +135,106 @@ body.blurred{
 body{
     background: linear-gradient(135deg, #4ebaf4 0%, #ffffff 100%);
     min-height: 100vh;
-    display: flex;
+    /* display: flex;
     align-items: center;
-    flex-direction: column;
+    flex-direction: column; */
     
 }
-.button{
-   margin-bottom: 20px;
-   background-color: white;
-   border: 0;
-   width: 300px;
-   padding: 15px 0;
-   border-radius: 50px;
-   font-family: 'Lora', serif;
-   font-weight: bold;
-   font-size: 15px;
-   transition-duration: 0.3s;
-   transition-property: color, background-color, transform, box-shadow;
-   box-shadow: 0px 11px 22px -9px #000000;
-   cursor: pointer;
+.KhoiNut{
+    margin-top: 280px;
+    margin-left: 320px;
+    position: absolute;
+    display: flex;
+    gap:2px;
 }
-.gird-container{
-    display: grid;
-    color: black;
-    grid-template-columns: auto 1fr;
+.button{
+    display: flex;
+    width: 75px;
+    height: 40px;
+    border: 0;
+    border-radius: 40px;
+    overflow: hidden;
+    position: relative;
+    transition-duration: 0.3s;
+    transition-property: color, background-color, transform, box-shadow;
+    transform-origin: left;
+    transition: all 0.5s ease;
+    cursor: pointer;
+    flex :1;
     align-items: center;
-    justify-content: center;
-    gap : 15px;
-    margin-right: 50px;
+    justify-content: flex-start;
+}
+.button:hover{
+    color: white;
+    background-color: #9ed5f3;
+    transform: translateY(-5px);
+    box-shadow: 0px 11px 22px -9px #000000;
+    flex : 3;
+}
+
+.gird-container{
+    display: flex;
+    color: black;
+    grid-template-columns:1fr auto 1fr;
+    align-items: center;
+    /* justify-content: center; */
+    /* margin-right: 50px; */
 }
 .button:hover .gird-container,
 .button:hover .gird-container * {
   color: white;
 }
-.gird-container i{
-    margin-left: 15px;
-    justify-self: flex-start;
-}
-.button:hover{
+/* .gird-container p{
+    width: 75px;
+} */
+ .button:hover .gird-container > i.fa-phone::after {
+    content: "Phone";
+    transform: translateX(0);
+    font-size: 16px;
+    font-weight: 500;
+    margin-left: 8px;
     color: white;
-    background-color: #4ebaf4;
-    transform: translateY(-5px);
-    box-shadow: 0px 11px 22px -9px #000000;
+    font-family: 'Lora', serif;
+    font-weight: bold;
+}
+ .button:hover .gird-container > i.fa-envelope::after {
+    content: "Gmail";
+    transform: translateX(0);
+    font-size: 16px;
+    font-weight: 500;
+    margin-left: 8px;
+    color: white;
+    font-family: 'Lora', serif;
+    font-weight: bold;
+} .button:hover .gird-container > i.fa-facebook::after {
+    content: "Facebook";
+    transform: translateX(0);
+    font-size: 16px;
+    font-weight: 500;
+    margin-left: 8px;
+    color: white;
+    font-family: 'Lora', serif;
+    font-weight: bold;
+} .button:hover .gird-container > i.fa-instagram::after {
+    content: "Instagram";
+    transform: translateX(0);
+    font-size: 16px;
+    font-weight: 500;
+    margin-left: 8px;
+    color: white;
+    font-family: 'Lora', serif;
+    font-weight: bold;
+}
+
+.gird-container i{
+    margin-left: 30px;
+    margin-right: 0;
+    transition: transform 0.4s ease;
+    
+}
+.button:hover .gird-container i{
+    margin-left: 20px;
+    margin-right: 0;
 }
 .favorite-title {
     text-align: center;
@@ -186,7 +276,9 @@ body{
     }
 }
 .scroll-button {
-    margin-top: 30px;
+    margin-top: 400px;
+    margin-left: 360px;
+    width: 230px;
     padding: 12px 25px;
     background-color: #4ebaf4;
     color: white;
@@ -198,6 +290,7 @@ body{
     transition: background-color 0.3s, transform 0.3s;
     font-family: 'Montserrat', sans-serif;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    /* animation: otextmove 2s ease-in-out infinite; */
 }
 
 .scroll-button i {
@@ -230,14 +323,37 @@ body{
     animation: heartFloat 2s ease-out forwards; /* bubble 2s ease-out forwards */
 
 }
-/* @keyframes bubble {
-    0% { transform: scale(1); }
-    25% { transform: scale(1.3); }
-    50% { transform: scale(0.8); }
-    75% { transform: scale(1.2); }
-    100% { transform: scale(1); }
-} */
 @keyframes heartFloat {
-    0% { opacity: 1; transform: translateY(0) rotate(0deg); }
-    100% { opacity: 0; transform: translateY(-100px) rotate(45deg); }
+    0% { opacity: 1; transform: translateY(0) rotate(0deg) scale(1); }
+    25% { opacity: 1; transform: translateY(-25px) rotate(12deg) scale(1.3);}
+    50% { opacity: 1; transform: translateY(-50px) rotate(24deg) scale(0.8);}
+    75% { opacity: 1; transform: translateY(-75px) rotate(36deg) scale(1.2);}
+    100% { opacity: 0; transform: translateY(-100px) rotate(45deg) scale(1); }
+}
+@keyframes otextmove {
+    0%{transform: translateY(-10px);}
+    50%{transform: translateY(10px);}
+    100%{transform: translateY(-10px);}
+}
+/* Tổng thể thanh cuộn */
+::-webkit-scrollbar {
+  width: 10px;           /* Chiều rộng */
+  height: 10px;          /* Nếu là cuộn ngang */
+}
+
+/* Track - phần nền của thanh cuộn */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+/* Thumb - phần kéo được */
+::-webkit-scrollbar-thumb {
+  background: #8fcafb;
+  border-radius: 10px;
+}
+
+/* Hover vào thumb */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
